--- a/monerod.conf
+++ b/monerod.conf
@@ -23,8 +23,8 @@
 #config-file=/data/data/com.termux/files/home/storage/external-1/bitmonero/monerod.conf
 data-dir=/data/data/com.termux/files/home/storage/external-1/bitmonero
 
-# the log file, stored in tha data folder by default. For best performance you can choose internal SD or diable logging
-#log-file=/data/data/com.termux/files/home/storage/external-1/bitmonero/monerod.log
+# the log file, stored default on internal storage for best performance
+log-file=/data/data/com.termux/files/home/storage/shared/monerod.log
 
 
 ###################
@@ -42,7 +42,7 @@ max-log-files=10                # max amount of log files; default: 50; recommen
 # SERVER
 no-igd=1                        # disable UPnP port mapping, improves security if not behind a NAT
 no-zmq=1                        # disable ZMQ RPC server, it's unfinished and this option reduces attack surface
-max-txpool-weight=648000000     # maximum tx pool size in bytes, reduce if device loaw on RAM; default=648000000 = 618MB
+max-txpool-weight=648000000     # maximum tx pool size in bytes, reduce if device low on RAM; default=648000000 = 618MB
 enforce-dns-checkpointing=1     # emergency checkpoints, see https://monerodocs.org/infrastructure/monero-pulse/
 
 ####################
@@ -53,14 +53,25 @@ enforce-dns-checkpointing=1     # emergency checkpoints, see https://monerodocs.
 
 #seed-node=host:port            # get initial list of nodes only form this device
 #add-peer=host:port             # add node manually
-add-priority-node=node-1.sethsimmons.me    # add priority node (given IP is just an example)
-#add-exclusive-node=node-1.sethsimmons.me   # add an exclusive node, (given IP is just an example)
+#add-priority-node=host:post    # add priority node (given IP is just an example)
+#add-exclusive-node=host:port   # add an exclusive node, (given IP is just an example)
+
+# add a few community run, high-performance nodes. This greatly improves sync performance, especially on older devices
+# source: https://github.com/WooKeyWallet/monero-nodes
+add-priority-node=node-1.sethsimmons.me
+#add-priority-node=node.xmr.to
+#add-priority-node=opennode.xmr-tw.org
+#add-priority-node=node.moneroworld.com
+#add-priority-node=node.xmrbackb.one
+#add-priority-node=uwillrunanodesoon.moneroworld.com
+#add-priority-node=nodes.hashvault.pro
+#add-priority-node=node.supportxmr.com
+
 
 ###################
 # P2P
 # If enabled (IP and port bound) the node can send blocks to other nodes
-#p2p-bind-ip=0.0.0.0             # bind to all interfaces (default)
-p2p-bind-ip=127.0.0.1           # bind only to localhost, this effectively disables P2P sharing  
+p2p-bind-ip=0.0.0.0             # bind to all interfaces (default)
 p2p-bind-port=18080             # bind to default port
 #p2p-external-port=0            # relavant if behind a NAT; default: 0
 #p2p-use-ipv6=0                 # use IPv6;  default: 0
@@ -69,13 +80,13 @@ p2p-bind-port=18080             # bind to default port
 #hide-my-port=1                 # disable IP advertisements; directly connected nodes will still see it, but won't spread it
 #igd=delayed                    # relavant if behind a NAT; default: delayed; other options: disabled, enabled
 
-out-peers=16                    # nr ouf out peers improves sync and tx awareness; default: 8; recommended: 64
-in-peers=16                   # default: unlimited; recommended: 1024
+out-peers=16                    # nr ouf out peers improves sync and tx awareness; default: 8; recommended: 16
+in-peers=64                  	# default: unlimited; recommended: 32
 limit-rate-up=4096              # max upload speed in kB/s, for contributions to the p2p network; default: 2048
 limit-rate-down=16384           # max download speed in kB/s, for initial sync; default: 8192
 #limit-rate                     # better use individual limits above
 #offline=0                      # useful for working with an archival blockchain
-#allow-local-ip=0               # usefull for running multiple node on the same device
+#allow-local-ip=0               # useful for running multiple node on the same device
 
 
 ###################
@@ -111,10 +122,10 @@ limit-rate-down=16384           # max download speed in kB/s, for initial sync; 
 #sync-pruned-blocks=1           # use with prune-blockchain=1 to reduce network traffic
 
 max-concurrency=8               # define nuber of threads; default: 0 = #CPU cores
-prep-blocks-threads=8           # define number of threads for PoW block validation during sync; default: 4; recommended: 3
+prep-blocks-threads=3           # define number of threads for PoW block validation during sync; default: 4; recommended: 3
 
 fast-block-sync=1               # do not PoW validate old blocks (ie. blocks before the release of monerod) for faster syncing; default: 1
-db-sync-mode=fast:async         # default: fast:async:250000000bytes; this can corrupt the database on crash
+db-sync-mode=safe:sync          # default: fast:async:250000000bytes; this can corrupt the database on crash
                                 # recommended: safe:sync; slower, but corruption-proof
                                 # [safe|fast|fastest]:[sync|async]:[<nblocks_per_sync>[blocks]|<nbytes_per_sync>[bytes]]
-block-sync-size=1               # syncronisation batch size; default: 20; recommended: 1 (for faster status updates)
+block-sync-size=1               # syncronisation batch size; default: 20; recommended: 4 (for faster status updates)
